# entropium

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
.github/workflows/: docs.yml  release.yml
benches/: entropy_bench.rs
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/api/: conditional-entropy.md  cross-entropy.md  entropy.md  index.md  joint-entropy.md  js-divergence.md  kl-divergence.md  mutual-information.md
docs/guide/: getting-started.md
src/: conditional_entropy.rs  cross_entropy.rs  entropy.rs  error.rs  joint_entropy.rs  js_divergence.rs  kl_divergence.rs  lib.rs  mutual_information.rs
