[package]
name = "entropium"
version = "0.2.0"
edition = "2024"
description = "Information-theory primitives: entropy, joint entropy, conditional entropy, and mutual information"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "entropy_bench"
harness = false
